# tynkerbase-client

./: .gitignore  package-lock.json  package.json  tynkerbase-uninstall.py
src/: App.css  App.tsx
src-tauri/: .tynkerbase-config.json  Cargo.toml  Makefile  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_interface.rs  api_auth_interface.rs  api_interface.rs  config.rs  constants.rs  consts.rs  global_state.rs  main.rs  tauri_cmds.rs
src/components/: schemas.ts  utils.ts
src/components/atoms/: atoms.tsx
src/components/atoms/styles/: ContextMenuStyles.module.css  IconStyles.module.css  LoaderStyles.module.css  ServerIconStyles.module.css
src/components/molecules/: molecules.tsx
src/components/molecules/styles/: ComingSoonStyles.module.css  ContainerCardStyles.module.css  NodeInfoCardStyles.module.css  NodeTitleBarStyles.module.css  SidePanelStyles.module.css
src/components/organisms/: organisms.tsx
src/components/organisms/styles/: NodeInfoPageStyles.module.css  NodeMgmtPageStyles.module.css
