[package]
name = "tynkerbase-client"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tynkerbase_universal = { git = "https://github.com/akneni/tynkerbase-universal.git", branch = "master"}
tauri = { version = "1", features = ["shell-open"] }
clap = { version = "4.5.7", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.4"
anyhow = "1.0.86"
rand = "0.8.5"
tokio = { version = "1.38.0", features = ["full"] }
bincode = "1.3.3"
sha2 = "0.10.8"
hex = "0.4.3"
rpassword = "7.3.1"
prettytable-rs = "0.10.0"
dirs = "5.0.1"
ansi_term = "0.12.1"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
